added sumenu into setting and tried to add on main screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tifinnearme.priteshpatel.materialdrawer">
+    package="com.tifinnearme.priteshpatel.materialdrawer" >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/tifin"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".material_test.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,11 +17,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Subactivity"
-            android:label="Subactivity">
+            android:name=".material_test.Subactivity"
+            android:label="Subactivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".material_test.MainActivity" />
+        </activity>
+        <activity
+            android:name=".material_test.ActivityUsingTabLibrary"
+            android:label="@string/title_activity_activity_using_tab_library" >
         </activity>
     </application>
 
