--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
+
 }
