Sort by name in popular working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.+'
     compile 'com.telly:mrvector:0.2.0'
     compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 
 }
