--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".material_test.VectorTestActivity"
             android:label="@string/title_activity_vector_test" >
         </activity>
+        <activity
+            android:name="com.tifinnearme.priteshpatel.materialdrawer.pojo.Show_Movie_Details"
+            android:label="@string/title_activity_vector_test" >
+        </activity>
         <service android:name=".services.MyService"
             android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
         <!--If a job service is declared in the manifest but not protected with this permission, that service will be ignored by the OS.-->
